force-app/main/default/objects/Account/fields/Lilly_Social_Media_Mention_Total__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Social_Media_Mention_Total__c</fullName>
    <label>Social Media Mention Total</label>
    <length>10</length>
    <type>Text</type>
</CustomField>