force-app/main/default/objects/Account/fields/Lilly_Speaker__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Speaker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lilly Speaker?</label>
    <type>Checkbox</type>
</CustomField>