force-app/main/default/objects/Account/fields/Lilly_Special_Contracting_Needs__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Special_Contracting_Needs__c</fullName>
    <label>Special Contracting Needs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Institution Limits</fullName>
            </value>
            <value>
                <fullName>Country Limits</fullName>
            </value>
            <value>
                <fullName>State Limit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>