force-app/main/default/objects/Account/fields/Lilly_Spend_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Spend_Threshold__c</fullName>
    <label>Spend Threshold %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>