force-app/main/default/objects/Account/fields/Lilly_Tags__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Tags__c</fullName>
    <label>Test_Tags</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pediatric Rheum</fullName>
            </value>
            <value>
                <fullName>LDO_Colorado Obesity Society Board</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>