force-app/main/default/objects/Account/fields/Lilly_TL_Type__c.field-meta.xml
<CustomField>
    <fullName>Lilly_TL_Type__c</fullName>
    <label>TL Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prescriber</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>