force-app/main/default/objects/Account/fields/Lilly_Total_Works__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Total_Works__c</fullName>
    <label>Total Works</label>
    <length>10</length>
    <type>Text</type>
</CustomField>