force-app/main/default/objects/Account/fields/Lilly_Type_of_work_with_Lilly__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Type_of_work_with_Lilly__c</fullName>
    <label>Type of work with Lilly</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Speaker</fullName>
            </value>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>Author</fullName>
            </value>
            <value>
                <fullName>Faculty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>