force-app/main/default/objects/Account/fields/Lilly_URL_From_CPS__c.field-meta.xml
<CustomField>
    <fullName>Lilly_URL_From_CPS__c</fullName>
    <label>URL From CPS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>