force-app/main/default/objects/Account/fields/Lilly_Workday_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Workday_Last_Name__c</fullName>
    <formula>Lilly_Work_Day__r.LastName</formula>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>