force-app/main/default/objects/Account/fields/Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Market_Share__c</fullName>
    <label>Market Share</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>