force-app/main/default/objects/Account/fields/MSL_Collabration__c.field-meta.xml
<CustomField>
    <fullName>MSL_Collabration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MSL Collabration</label>
    <type>Checkbox</type>
</CustomField>