force-app/main/default/objects/Account/fields/National_Account__c.field-meta.xml
<CustomField>
    <fullName>National_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Allergan demo in NBC.</description>
    <label>National Account</label>
    <type>Checkbox</type>
</CustomField>