force-app/main/default/objects/Account/fields/NB_Speaker_Rating_AI_ML__c.field-meta.xml
<CustomField>
    <fullName>NB_Speaker_Rating_AI_ML__c</fullName>
    <label>NB Speaker Rating AI/ML</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Med</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>