force-app/main/default/objects/Account/fields/Net_New_Account__c.field-meta.xml
<CustomField>
    <fullName>Net_New_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Allergan demo in NBC.</description>
    <label>Net New Account</label>
    <type>Checkbox</type>
</CustomField>