force-app/main/default/objects/Account/fields/Next_Best_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Next_Best_Sequence__c</fullName>
    <label>Next Best Sequence</label>
    <length>100</length>
    <type>Text</type>
</CustomField>