force-app/main/default/objects/Account/fields/Number_Of_Patients__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Patients__c</fullName>
    <description>Number Of Patients</description>
    <inlineHelpText>Number Of Patients</inlineHelpText>
    <label>Number Of Patients</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>