force-app/main/default/objects/Account/fields/OCE1__ProductRestrictionsJobModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ProductRestrictionsJobModifiedDate__c</fullName>
    <description>It is a DateTime when restrictions of the products were last modified or updated. This timestamp is essential for supporting the run of the Product Restrictions Job on delta records.</description>
    <label>Product Restrictions Job Modified Date</label>
    <type>DateTime</type>
</CustomField>