force-app/main/default/objects/Account/fields/OCE1__TargetingJobModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>OCE1__TargetingJobModifiedDate__c</fullName>
    <description>Date and time when Account was processed by Presentation Targeting batch job. (MVP)</description>
    <label>Targeting Job Modified Date</label>
    <type>DateTime</type>
</CustomField>