force-app/main/default/objects/Account/fields/OCE1__TargetingModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>OCE1__TargetingModifiedDate__c</fullName>
    <description>Time when Account, Targeted Presentations External Ids or Territory is changed. (MVP)</description>
    <label>Targeting Modified Date</label>
    <type>DateTime</type>
</CustomField>