force-app/main/default/objects/Account/fields/OCE__AbbreviatedName__c.field-meta.xml
<CustomField>
    <fullName>OCE__AbbreviatedName__c</fullName>
    <description>Text field applicable to only HCO that will store the abbreviated name of the Japanese organization. Needed for INS-DOC records where the OOB SFDC name is a concatenation of HCP Kanji @ HCO Abbreviated name</description>
    <inlineHelpText>Text field applicable to only HCO that will store the abbreviated name of the Japanese organization. Needed for INS-DOC records where the OOB SFDC name is a concatenation of HCP Kanji @ HCO Abbreviated name</inlineHelpText>
    <label>Abbreviated Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>