force-app/main/default/objects/Account/fields/OCE__AcademicTitleCode__c.field-meta.xml
<CustomField>
    <fullName>OCE__AcademicTitleCode__c</fullName>
    <description>Degree Code</description>
    <label>Academic Title Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hospital Specialist</fullName>
            </value>
            <value>
                <fullName>Hospital Assistant Specialist</fullName>
            </value>
            <value>
                <fullName>Professor, Hospital Doctor</fullName>
            </value>
            <value>
                <fullName>Faculties Monitor</fullName>
            </value>
            <value>
                <fullName>Hospital Assistant Doctor</fullName>
            </value>
            <value>
                <fullName>Ex-Work Chief</fullName>
            </value>
            <value>
                <fullName>Ex-Provisory Hospital Intern</fullName>
            </value>
            <value>
                <fullName>Ex-Hospital Trainee</fullName>
            </value>
            <value>
                <fullName>Ex-Monitor</fullName>
            </value>
            <value>
                <fullName>Ex-Hospital Clinical Clerk</fullName>
            </value>
            <value>
                <fullName>Clinic Ex-chief</fullName>
            </value>
            <value>
                <fullName>Hospital Ex-assistant</fullName>
            </value>
            <value>
                <fullName>Doyen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>