force-app/main/default/objects/Account/fields/OCE__AccountFullName__c.field-meta.xml
<CustomField>
    <fullName>OCE__AccountFullName__c</fullName>
    <description>Universal Account name formula. In case of Person Account type, standard Name field on Account sObject not always works correctly.</description>
    <formula>IF( IsPersonAccount , IF( ISBLANK(FirstName) ,LastName, FirstName + &apos; &apos; + LastName) , Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountFullName</label>
    <type>Text</type>
</CustomField>