force-app/main/default/objects/Account/fields/OCE__AccountName__c.field-meta.xml
<CustomField>
    <fullName>OCE__AccountName__c</fullName>
    <description>Universal Account name formula.</description>
    <formula>IF( IsPersonAccount , LastName + IF( ISBLANK( OCE__PreferredName__c ) ,&apos;&apos;,  &apos;(&apos;+OCE__PreferredName__c+&apos;)&apos; ) +&apos; &apos;+ FirstName + IF( ISBLANK( OCE__NickName__c ) ,&apos;&apos;,&apos;(&apos;+ OCE__NickName__c +&apos;)&apos;) ,  IF( ISBLANK(  OCE__BuildingLabel__c  ) , Name+&apos; &apos;+ Parent.Name , Name+&apos; &apos;+Parent.Name+&apos; &apos;+&apos;(&apos;+OCE__BuildingLabel__c+&apos;)&apos;) )</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>