force-app/main/default/objects/Account/fields/OCE__AffiliationPartFamily__c.field-meta.xml
<CustomField>
    <fullName>OCE__AffiliationPartFamily__c</fullName>
    <description>Lists if the doctor&apos;s facility is part of a larger family of facilities.
            Appears on HCP-JP page layout.</description>
    <inlineHelpText>Lists if the doctor&apos;s facility is part of a larger family of facilities.
            Appears on HCP-JP page layout.</inlineHelpText>
    <label>Affiliation Part Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>