force-app/main/default/objects/Account/fields/OCE__AHAID__c.field-meta.xml
<CustomField>
    <fullName>OCE__AHAID__c</fullName>
    <description>The AHA ID to be updated if the record type selected is Update HCO.
            This is used to identify a new AHA ID.
            Appears on Update HCO page layout</description>
    <inlineHelpText>The AHA ID to be updated if the record type selected is Update HCO.
            This is used to identify a new AHA ID.
            Appears on Update HCO page layout</inlineHelpText>
    <label>AHA ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>