force-app/main/default/objects/Account/fields/OCE__AllowRestrictedProducts__c.field-meta.xml
<CustomField>
    <fullName>OCE__AllowRestrictedProducts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate that restrictions are to be ignored.</description>
    <inlineHelpText>This field is used to indicate that restrictions are to be ignored.</inlineHelpText>
    <label>Allow Restricted Products</label>
    <type>Checkbox</type>
</CustomField>