force-app/main/default/objects/Account/fields/OCE__AutoAssortmentIds__c.field-meta.xml
<CustomField>
    <fullName>OCE__AutoAssortmentIds__c</fullName>
    <description>The list of Assortments assigned to the Account via the Segmentation.</description>
    <inlineHelpText>The list of Assortments assigned to the Account via the Segmentation.</inlineHelpText>
    <label>Auto Assigned Assortment IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>