force-app/main/default/objects/Account/fields/OCE__AvailablePaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>OCE__AvailablePaymentTerms__c</fullName>
    <description>Payment Terms available for Account</description>
    <inlineHelpText>Payment Terms available for Account</inlineHelpText>
    <label>Available Payment Terms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OCE__PaymentTerm</valueSetName>
    </valueSet>
</CustomField>