force-app/main/default/objects/Account/fields/OCE__Birthday__c.field-meta.xml
<CustomField>
    <fullName>OCE__Birthday__c</fullName>
    <description>The doctor&apos;s birthday.</description>
    <inlineHelpText>The doctor&apos;s birthday.</inlineHelpText>
    <label>Birthday</label>
    <type>Date</type>
</CustomField>