force-app/main/default/objects/Account/fields/OCE__Birthplace__c.field-meta.xml
<CustomField>
    <fullName>OCE__Birthplace__c</fullName>
    <description>The birthplace of the doctor.
            Appears on HCP-JP page layout.</description>
    <inlineHelpText>The birthplace of the doctor.
            Appears on HCP-JP page layout.</inlineHelpText>
    <label>Birthplace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>