force-app/main/default/objects/Account/fields/OCE__Budget__c.field-meta.xml
<CustomField>
    <fullName>OCE__Budget__c</fullName>
    <description>Stores Budget for Account.</description>
    <inlineHelpText>Stores Budget for Account.</inlineHelpText>
    <label>Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>