force-app/main/default/objects/Account/fields/OCE__BudgetFormulaDashboard__c.field-meta.xml
<CustomField>
    <fullName>OCE__BudgetFormulaDashboard__c</fullName>
    <description>Stores pill image that is used on Dashboard</description>
    <formula>IF(!ISBLANK(OCE__Budget__c) &amp;&amp; OCE__Budget__c != 0,
            &quot;&lt;span style=&apos;border-radius: 8px;background: #76028D;padding: 1px 9px;color: white;&apos;&gt; $&quot;
            &amp; TEXT(OCE__Budget__c) &amp;
            &quot;&lt;/span&gt;&quot;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Stores pill image that is used on Dashboard</inlineHelpText>
    <label>Budget</label>
    <type>Text</type>
</CustomField>