force-app/main/default/objects/Account/fields/OCE__BuildingLabel__c.field-meta.xml
<CustomField>
    <fullName>OCE__BuildingLabel__c</fullName>
    <description>HCO Building Label</description>
    <inlineHelpText>HCO Building Label</inlineHelpText>
    <label>Building Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>