force-app/main/default/objects/Account/fields/OCE__CallRecordTypes__c.field-meta.xml
<CustomField>
    <fullName>OCE__CallRecordTypes__c</fullName>
    <description>Delimited list of call record types available on Call for this account.</description>
    <label>Call Record Types</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>