force-app/main/default/objects/Account/fields/OCE__CallRegulation__c.field-meta.xml
<CustomField>
    <fullName>OCE__CallRegulation__c</fullName>
    <description>Call Regulation</description>
    <inlineHelpText>Call Regulation</inlineHelpText>
    <label>Call Regulation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>