force-app/main/default/objects/Account/fields/OCE__Classification__c.field-meta.xml
<CustomField>
    <fullName>OCE__Classification__c</fullName>
    <description>Classification the Account falls into</description>
    <inlineHelpText>Classification the Account falls into</inlineHelpText>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Client Defined</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>