force-app/main/default/objects/Account/fields/OCE__ClassOfTrade__c.field-meta.xml
<CustomField>
    <fullName>OCE__ClassOfTrade__c</fullName>
    <description>(KAM) The nature of the business based on the patient population served.</description>
    <inlineHelpText>(KAM) The nature of the business based on the patient population served.</inlineHelpText>
    <label>Class of Trade</label>
    <length>100</length>
    <type>Text</type>
</CustomField>