force-app/main/default/objects/Account/fields/OCE__ClinicalTrialSite__c.field-meta.xml
<CustomField>
    <fullName>OCE__ClinicalTrialSite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(KAM) Indicates if clinical trials are conducted at this Account</description>
    <inlineHelpText>(KAM) Indicates if clinical trials are conducted at this Account</inlineHelpText>
    <label>Clinical Trial Site</label>
    <type>Checkbox</type>
</CustomField>