force-app/main/default/objects/Account/fields/OCE__CollegeOfPhysiciansLicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE__CollegeOfPhysiciansLicenseNumber__c</fullName>
    <description>License number assigned to Account from College of Physicians.
            Canada specific.</description>
    <inlineHelpText>License number assigned to Account from College of Physicians.
            Canada specific.</inlineHelpText>
    <label>College Of Physicians License Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>