force-app/main/default/objects/Account/fields/OCE__CollegeOfPhysiciansType__c.field-meta.xml
<CustomField>
    <fullName>OCE__CollegeOfPhysiciansType__c</fullName>
    <description>DEPRECATED. Type of College of Physicians license, which will be C.
            Canada specific.</description>
    <inlineHelpText>DEPRECATED. Type of College of Physicians license, which will be C.
            Canada specific.</inlineHelpText>
    <label>DEPRECATED College of Physicians Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>__c</fullName>
            </value>
            <value>
                <fullName>Regulatory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>