force-app/main/default/objects/Account/fields/OCE__Comment__c.field-meta.xml
<CustomField>
    <fullName>OCE__Comment__c</fullName>
    <description>Comments about the doctor.
            Appears on HCP-JP page layout.</description>
    <inlineHelpText>Comments about the doctor.
            Appears on HCP-JP page layout.</inlineHelpText>
    <label>Comment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>