force-app/main/default/objects/Account/fields/OCE__ConcurId__c.field-meta.xml
<CustomField>
    <fullName>OCE__ConcurId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique Concur record Id</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique Concur record Id</inlineHelpText>
    <label>Concur Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>