force-app/main/default/objects/Account/fields/OCE__CoreServices__c.field-meta.xml
<CustomField>
    <fullName>OCE__CoreServices__c</fullName>
    <description>Core Services</description>
    <label>Core Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>