force-app/main/default/objects/Account/fields/OCE__CountryCode__c.field-meta.xml
<CustomField>
    <fullName>OCE__CountryCode__c</fullName>
    <description>Country to which Account belongs to</description>
    <inlineHelpText>Country to which Account belongs to</inlineHelpText>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OCE__Countries</valueSetName>
    </valueSet>
</CustomField>