force-app/main/default/objects/Account/fields/OCE__DataChangeComments__c.field-meta.xml
<CustomField>
    <fullName>OCE__DataChangeComments__c</fullName>
    <description>Comments for Data Change</description>
    <inlineHelpText>Comments for Data Change.</inlineHelpText>
    <label>Data Change Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>