force-app/main/default/objects/Account/fields/OCE__DCCRule__c.field-meta.xml
<CustomField>
    <fullName>OCE__DCCRule__c</fullName>
    <description>Drug Control Committee Rule/Frequency</description>
    <inlineHelpText>Drug Control Committee Rule/Frequency</inlineHelpText>
    <label>DCC Rule</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>