force-app/main/default/objects/Account/fields/OCE__Deceased__c.field-meta.xml
<CustomField>
    <fullName>OCE__Deceased__c</fullName>
    <description>Store Deceased Date</description>
    <inlineHelpText>Store Deceased Date</inlineHelpText>
    <label>Deceased Date</label>
    <type>Date</type>
</CustomField>