force-app/main/default/objects/Account/fields/OCE__DeceasedDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__DeceasedDate__c</fullName>
    <description>Deprecated: Store Deceased Date</description>
    <inlineHelpText>Deprecated: Store Deceased Date</inlineHelpText>
    <label>Deprecated: Deceased Date</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>