force-app/main/default/objects/Account/fields/OCE__DefaultPaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>OCE__DefaultPaymentTerm__c</fullName>
    <description>Default payment term for an Account.</description>
    <inlineHelpText>Default payment term for an Account.</inlineHelpText>
    <label>Default Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OCE__PaymentTerm</valueSetName>
    </valueSet>
</CustomField>