force-app/main/default/objects/Account/fields/OCE__DiagnosisAndTreatmentDepartment__c.field-meta.xml
<CustomField>
    <fullName>OCE__DiagnosisAndTreatmentDepartment__c</fullName>
    <description>The department the HCP is part of.
            Appears on HCP-JP page layout.</description>
    <inlineHelpText>The department the HCP is part of.
            Appears on HCP-JP page layout.</inlineHelpText>
    <label>Diagnosis and Treatment Department</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal Medicine</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Orthopedics</fullName>
            </value>
            <value>
                <fullName>Cerebral Surgery</fullName>
            </value>
            <value>
                <fullName>Radiology Department</fullName>
            </value>
            <value>
                <fullName>Anesthesiology</fullName>
            </value>
            <value>
                <fullName>Surgery, emergency</fullName>
            </value>
            <value>
                <fullName>Department of Obstetrics and Gynecology</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>Plastic Surgery</fullName>
            </value>
            <value>
                <fullName>Urology</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Ophthalmology</fullName>
            </value>
            <value>
                <fullName>Ear, Nose and Throat</fullName>
            </value>
            <value>
                <fullName>Department of Neurology and Psychiatry</fullName>
            </value>
            <value>
                <fullName>Deer oral surgery</fullName>
            </value>
            <value>
                <fullName>Hygiene inspection</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>