force-app/main/default/objects/Account/fields/OCE__DiagramHasChildrenIcon__c.field-meta.xml
<CustomField>
    <fullName>OCE__DiagramHasChildrenIcon__c</fullName>
    <description>(DEPRECATED) Marker-icon to indicate on affiliation diagram that account has actually more children than it&apos;s shown.</description>
    <formula>&apos;/resource/&apos;
            +
            IF (
            ISBLANK($Setup.OCE__PackageConfig__c.OCE__Namespace__c), &apos;&apos;, $Setup.OCE__PackageConfig__c.OCE__Namespace__c + &apos;__&apos;
            )
            +
            &apos;Affiliation/images/icons/has-children-nodes.png&apos;</formula>
    <inlineHelpText>Marker-icon to indicate on affiliation diagram that account has actually more children than it&apos;s shown.</inlineHelpText>
    <label>DEPRECATED Diagram Has Children Icon</label>
    <type>Text</type>
</CustomField>