force-app/main/default/objects/Account/fields/OCE__DiagramLabelAddition__c.field-meta.xml
<CustomField>
    <fullName>OCE__DiagramLabelAddition__c</fullName>
    <description>(DEPRECATED) Label to be used on affiliation diagram as node title (optional second line).</description>
    <formula>/* RecordType.Name */
            &apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Label to be used on affiliation diagram as node title (optional second line).</inlineHelpText>
    <label>DEPRECATED Diagram Label Addition</label>
    <type>Text</type>
</CustomField>