force-app/main/default/objects/Account/fields/OCE__DiagramLabelMain__c.field-meta.xml
<CustomField>
    <fullName>OCE__DiagramLabelMain__c</fullName>
    <description>(DEPRECATED) Label to be used on affiliation diagram as node title (first line).</description>
    <formula>IF(
            IsPersonAccount,
            FirstName + &apos; &apos; + LastName,
            Name
            )</formula>
    <inlineHelpText>Label to be used on affiliation diagram as node title (first line).</inlineHelpText>
    <label>DEPRECATED Diagram Label Main</label>
    <type>Text</type>
</CustomField>