force-app/main/default/objects/Account/fields/OCE__DiagramSelectedIcon__c.field-meta.xml
<CustomField>
    <fullName>OCE__DiagramSelectedIcon__c</fullName>
    <description>(DEPRECATED) Icon to represent account on affiliation diagram in selected state.</description>
    <formula>&apos;/resource/&apos; +

/* package prefix (if any) */
IF ( ISBLANK($Setup.OCE__PackageConfig__c.OCE__Namespace__c),
    &apos;&apos;,
    $Setup.OCE__PackageConfig__c.OCE__Namespace__c + &apos;__&apos;
)

+ &apos;Affiliation/images/icons/&apos; +

/* resource itself */
IF ( IsPersonAccount,
    IF( RecordType.DeveloperName = &apos;MP&apos;,
        &apos;medical-professional-selected-node.jpg&apos;,
        &apos;business-contact-selected-node.jpg&apos;
    ),
    &apos;organization-selected-node.png&apos;
)</formula>
    <inlineHelpText>Icon to represent account on affiliation diagram in selected state.</inlineHelpText>
    <label>DEPRECATED Diagram Selected Icon</label>
    <type>Text</type>
</CustomField>