force-app/main/default/objects/Account/fields/OCE__DispensesMedication__c.field-meta.xml
<CustomField>
    <fullName>OCE__DispensesMedication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(KAM) Indicates if the Account dispenses medication.</description>
    <inlineHelpText>(KAM) Indicates if the Account dispenses medication.</inlineHelpText>
    <label>Dispenses Medication</label>
    <type>Checkbox</type>
</CustomField>