force-app/main/default/objects/Account/fields/OCE__DoNotCall__c.field-meta.xml
<CustomField>
    <fullName>OCE__DoNotCall__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if an Account does not wish to be called upon.</description>
    <inlineHelpText>Indicates if an Account does not wish to be called upon.</inlineHelpText>
    <label>Do Not Call</label>
    <type>Checkbox</type>
</CustomField>